src/OpenCvSharpExtern/ml_CvDTree.h

    ////////////////////////////////////

CVAPI(int) ml_CvDTreeTrainData_sample_count(CvDTreeTrainData* obj)
{
	return obj->sample_count;
}
CVAPI(int) ml_CvDTreeTrainData_var_all(CvDTreeTrainData* obj)
{
	return obj->var_all;
}
CVAPI(int) ml_CvDTreeTrainData_var_count(CvDTreeTrainData* obj)
{
	return obj->var_count;
}
CVAPI(int) ml_CvDTreeTrainData_max_c_count(CvDTreeTrainData* obj)
{
	return obj->max_c_count;
}
CVAPI(int) ml_CvDTreeTrainData_ord_var_count(CvDTreeTrainData* obj)
{
	return obj->ord_var_count;
}
CVAPI(int) ml_CvDTreeTrainData_cat_var_count(CvDTreeTrainData* obj)
{
	return obj->cat_var_count;
}
CVAPI(int) ml_CvDTreeTrainData_have_labels(CvDTreeTrainData* obj)
{
	return obj->have_labels ? 1 : 0;
}
CVAPI(int) ml_CvDTreeTrainData_have_priors(CvDTreeTrainData* obj)
{
	return obj->have_priors ? 1 : 0;
}
CVAPI(int) ml_CvDTreeTrainData_is_classifier(CvDTreeTrainData* obj)
{
	return obj->is_classifier ? 1 : 0;
}
CVAPI(int) ml_CvDTreeTrainData_buf_count(CvDTreeTrainData* obj)
{
	return obj->buf_count;
}
CVAPI(int) ml_CvDTreeTrainData_buf_size(CvDTreeTrainData* obj)
{
	return obj->buf_size;
}
CVAPI(int) ml_CvDTreeTrainData_shared(CvDTreeTrainData* obj)
{
	return obj->shared ? 1 : 0;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_cat_count(CvDTreeTrainData* obj)
{
	return obj->cat_count;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_cat_ofs(CvDTreeTrainData* obj)
{
	return obj->cat_ofs;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_cat_map(CvDTreeTrainData* obj)
{
	return obj->cat_map;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_counts(CvDTreeTrainData* obj)
{
	return obj->counts;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_buf(CvDTreeTrainData* obj)
{
	return obj->buf;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_direction(CvDTreeTrainData* obj)
{
	return obj->direction;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_split_buf(CvDTreeTrainData* obj)
{
	return obj->split_buf;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_var_idx(CvDTreeTrainData* obj)
{
	return obj->var_idx;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_var_type(CvDTreeTrainData* obj)
{
	return obj->var_type;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_priors(CvDTreeTrainData* obj)
{
	return obj->priors;
}
CVAPI(CvMat*) ml_CvDTreeTrainData_priors_mult(CvDTreeTrainData* obj)
{
	return obj->priors_mult;
}
CVAPI(void) ml_CvDTreeTrainData_params(CvDTreeTrainData* obj, CvDTreeParams *p)
{
	*p = obj->params;
}
CVAPI(CvMemStorage*) ml_CvDTreeTrainData_tree_storage(CvDTreeTrainData* obj)
{
	return obj->tree_storage;
}
CVAPI(CvMemStorage*) ml_CvDTreeTrainData_temp_storage(CvDTreeTrainData* obj)
{
	return obj->temp_storage;
}
CVAPI(CvDTreeNode*) ml_CvDTreeTrainData_data_root(CvDTreeTrainData* obj)
{
	return obj->data_root;
}
CVAPI(CvSet*) ml_CvDTreeTrainData_node_heap(CvDTreeTrainData* obj)
{
	return obj->node_heap;
}
CVAPI(CvSet*) ml_CvDTreeTrainData_split_heap(CvDTreeTrainData* obj)
{
	return obj->split_heap;
}
CVAPI(CvSet*) ml_CvDTreeTrainData_cv_heap(CvDTreeTrainData* obj)
{
	return obj->cv_heap;
}
CVAPI(CvSet*) ml_CvDTreeTrainData_nv_heap(CvDTreeTrainData* obj)
{
	return obj->nv_heap;
}
CVAPI(uint64) ml_CvDTreeTrainData_rng(CvDTreeTrainData* obj)
{
	return obj->rng->state;
}
// CvDTree	
CVAPI(CvDTree*) ml_CvDTree_new()
{
	return new CvDTree();
}
CVAPI(int) ml_CvDTree_train1(
    CvDTree* obj, CvMat *trainData, int tflag, CvMat *responses,
	CvMat *varIdx, CvMat *sampleIdx, CvMat *varType, CvMat *missingMask, 
    CvDTreeParams *params )
{
	bool ret = obj->train(
        trainData, tflag, responses, varIdx, sampleIdx, varType, missingMask, *params);
    return ret ? 1 : 0;
}
CVAPI(int) ml_CvDTree_train2(
    CvDTree* obj, CvDTreeTrainData* trainData, CvMat *subsampleIdx)
{
    return obj->train(trainData, subsampleIdx) ? 1 : 0;
}
CVAPI(int) ml_CvDTree_train3(
    CvDTree* obj, CvMLData* trainData, CvDTreeParams *params)
{
    return obj->train(trainData, *params) ? 1 : 0;
}
CVAPI(int) ml_CvDTree_train_Mat(
    CvDTree* obj, cv::Mat *trainData, int tflag, cv::Mat *responses,
    cv::Mat *varIdx, cv::Mat *sampleIdx, cv::Mat *varType,
    cv::Mat *missingDataMask, CvDTreeParams *params)
{
    return obj->train(*trainData, tflag, *responses, entity(varIdx), entity(sampleIdx),
        entity(varType), entity(missingDataMask), *params) ? 1 : 0;
}
CVAPI(CvDTreeNode*) ml_CvDTree_predict_CvMat(CvDTree* obj,
    CvMat *sample, CvMat *missingDataMask, int preprocessedInput)
{
    return obj->predict(sample, missingDataMask, preprocessedInput != 0);
}
CVAPI(CvDTreeNode*) ml_CvDTree_predict_Mat(CvDTree* obj,
    cv::Mat *sample, cv::Mat *missingDataMask, int preprocessedInput)
{
    return obj->predict(*sample, entity(missingDataMask), preprocessedInput != 0);
}
CVAPI(cv::Mat*) ml_CvDTree_getVarImportance(CvDTree* obj)
{
    cv::Mat mat = obj->getVarImportance();
    return new cv::Mat(mat);
}
CVAPI(const CvDTreeNode*) ml_CvDTree_get_root(CvDTree* obj)
{
	return obj->get_root();
}
CVAPI(int) ml_CvDTree_get_pruned_tree_idx(CvDTree* obj)
{
	return obj->get_pruned_tree_idx();
}
CVAPI(CvDTreeTrainData*) ml_CvDTree_get_data(CvDTree* obj)
{
	return obj->get_data();
}
CVAPI(void) ml_CvDTree_clear(CvDTree* obj)
{
	obj->clear();
}